--- a/404.html
+++ b/404.html
@@ -1,92 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Valide.me - Página Não Encontrada</title>
-    <style type="text/css">
-body,
-html {
-	width: 100%;
-	height: 100%;
-	background-color: #fff;
-	overflow: hidden;
-}
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-body {
-	color: #715ac0;
-	text-align: center;
+        <title>Página Não Encontrada</title>
 
-	padding: 0;
-	min-height: 100%;
+        <!-- Fonts -->
+        <link rel="dns-prefetch" href="//fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 
-	display: table;
-	font-family: "Open Sans", Arial, sans-serif
-}
+        <!-- Styles -->
+        <style>
+            html, body {
+                background-color: #fff;
+                color: #715ac0;
+                font-family: 'Nunito', sans-serif;
+                font-weight: 100;
+                height: 100vh;
+                margin: 0;
+            }
 
-h1 {
-	font-family: inherit;
-	font-weight: 500;
-	line-height: 1.1;
-	color: inherit;
-	font-size: 36px
-}
+            .full-height {
+                height: 100vh;
+            }
 
-h1 small {
-	font-size: 68%;
-	font-weight: 400;
-	line-height: 1;
-	color: #fff
-}
+            .flex-center {
+                align-items: center;
+                display: flex;
+                justify-content: center;
+            }
 
-a {
-	text-decoration: none;
-	color: #715ac0;
-	font-size: inherit;
-	border-bottom: dotted 1px #707070
-}
+            .position-ref {
+                position: relative;
+            }
 
-p {
+            .code {
+                border-right: 2px solid;
+                font-size: 26px;
+                padding: 0 15px 0 15px;
+                text-align: center;
+            }
 
-	font-size: 18px;
-	margin-top: 35px;
+            .message {
+                font-size: 18px;
+                text-align: center;
+            }
+        </style>
+    </head>
+    <body>
 
-}
+        <center style="padding-top:30vh" >
+           <a href="https://valide.me"><img style="padding:40px" src="https://app.valide.me/assets/img/valideme-logo.svg" alt="Valide.me" height="50"></a>
+        </center>
+        <center>
 
-p span{
 
-	font-size: 25px;
-	padding-right: 15px;
-	margin-right: 15px;
-	border-right: 2px solid #715ac0;
+            <span style="margin-right: 10px;"class="code">
+              404
+            </span>
 
-}
+            <span class="message" style="padding: 10px;">
 
-.lead {
-	color: silver;
-	font-size: 21px;
-	line-height: 1.4
-}
+                Página Não Encontrada
+            </span>
 
-.cover {
-	display: table-cell;
-padding-top: 35vh;
-	height: 100%;
-}
-
-footer {
-	position: fixed;
-	width: 100%;
-	height: 40px;
-	left: 0;
-	bottom: 0;
-	color: #a0a0a0;
-	font-size: 14px
-}	
-	</style>
-</head>
-<body>
-    <div class="cover"><img src="https://app.valide.me/assets/img/valideme-logo.svg" height="50"><p><span>404</span>Página Não Encontrada</p></div>
-	
-    
-</body>
+        </center>
+    </body>
 </html>
